// ==========================================
// 1. USER MANAGEMENT
// ==========================================

Table users {
  id integer [pk, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  full_name varchar
  avatar_url varchar
  is_superuser boolean [default: false]
  status user_status [not null, default: 'ACTIVE']
  
  // BaseEntity Fields
  is_deleted boolean [default: false, note: 'Soft Delete']
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum user_status {
  ACTIVE
  INACTIVE
  BANNED
}

// ==========================================
// 2. PROJECT & ROLES
// ==========================================

Table projects {
  id integer [pk, increment]
  name varchar [not null]
  code varchar(10) [unique, not null]
  description text
  owner_id integer [not null]
  workflow_id integer [not null]
  
  start_date date
  end_date date
  status project_status [not null]

  // BaseEntity Fields
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum project_status {
  PLANNING
  IN_PROGRESS
  COMPLETED
  ARCHIVED
}

Table project_members {
  id integer [pk, increment]
  project_id integer [not null]
  user_id integer [not null]
  project_role_id integer [not null]
  joined_at timestamp [default: `now()`]

  indexes {
    (project_id, user_id) [unique]
  }
}

Table project_roles {
  id integer [pk, increment]
  name varchar [not null, note: 'Enum: OWNER, ADMIN, MEMBER, VIEWER'] 
  description text
}

Table project_invitations {
  id long [pk, increment]
  project_id integer [not null]
  inviter_id integer [not null]
  invitee_email varchar [not null]
  invitee_user_id integer [note: 'Null if user not registered']
  role_id integer [not null]
  token varchar [unique, not null]
  status invitation_status [not null]
  expired_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum invitation_status {
  PENDING
  ACCEPTED
  REJECTED
  EXPIRED
}

// ==========================================
// 3. WORKFLOW & ISSUE TYPES
// ==========================================

Table workflows {
  id integer [pk, increment]
  name varchar [unique, not null]
  description varchar
}

Table workflow_statuses {
  id integer [pk, increment]
  name varchar [not null]
  status_category status_category [not null]
  color_code varchar
}

Enum status_category {
  TO_DO
  IN_PROGRESS
  DONE
}

Table workflow_steps {
  id integer [pk, increment]
  workflow_id integer [not null]
  status_id integer [not null]
  step_order integer [not null]
  
  indexes {
    (workflow_id, status_id) [unique]
  }
}

Table status_transitions {
  id integer [pk, increment]
  workflow_id integer [not null]
  from_status_id integer [not null]
  to_status_id integer [not null]
}

Table issue_types {
  id integer [pk, increment]
  name varchar [unique, not null]
  icon_url varchar
  hierarchy_level issue_level [not null]
}

Enum issue_level {
  EPIC
  STORY
  TASK
  SUBTASK
}

// ==========================================
// 4. TASK & SPRINT
// ==========================================

Table sprints {
  id integer [pk, increment]
  name varchar [not null]
  goal text
  project_id integer [not null]
  start_date date
  end_date date
  duration sprint_duration
  status sprint_status [not null]

  // BaseEntity Fields
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum sprint_status {
  PLANNED
  ACTIVE
  COMPLETED
}

Enum sprint_duration {
  ONE_WEEK
  TWO_WEEKS
  FOUR_WEEKS
}

Table tasks {
  id integer [pk, increment]
  task_index integer [not null]
  title varchar [not null]
  description text
  priority task_priority
  story_points integer
  
  project_id integer [not null]
  issue_type_id integer [not null]
  status_id integer [not null]
  sprint_id integer
  parent_task_id integer [note: 'Self Reference for Subtasks']
  
  start_date date
  due_date date
  completed_at timestamp

  // BaseEntity Fields
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Enum task_priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Table task_assignees {
  id integer [pk, increment]
  task_id integer [not null]
  user_id integer [not null]
  assigned_at timestamp [default: `now()`]
  
  indexes {
    (task_id, user_id) [unique]
  }
}

Table labels {
  id integer [pk, increment]
  name varchar [unique, not null]
  color varchar
}

Table task_labels {
  id integer [pk, increment]
  task_id integer [not null]
  label_id integer [not null]
  
  indexes {
    (task_id, label_id) [unique]
  }
}

// ==========================================
// 5. ACTIVITY, COMMENTS & NOTIFICATIONS
// ==========================================

Table comments {
  id integer [pk, increment]
  content text [not null]
  task_id integer [not null]
  user_id integer [not null]

  // BaseEntity Fields
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table activity_logs {
  id integer [pk, increment]
  task_id integer [not null]
  user_id integer [not null]
  action activity_action [not null]
  log_description text
  old_value text
  new_value text
  created_at timestamp [default: `now()`]
}

Enum activity_action {
  CREATED
  UPDATED
  DELETED
  COMMENTED
  STATUS_CHANGED
}

Table notifications {
  id integer [pk, increment]
  user_id integer [not null, note: 'Recipient']
  sender_id integer [note: 'Nullable for system msg']
  reference_id long [note: 'TaskId or InvitationId']
  type notification_type [not null]
  content text
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
}

Enum notification_type {
  TASK_ASSIGNED
  PROJECT_INVITE
  MENTION
  DUE_DATE_SOON
}

// ==========================================
// RELATIONSHIPS (REFERENCES)
// ==========================================

// Projects
Ref: projects.owner_id > users.id
Ref: projects.workflow_id > workflows.id

// Project Members
Ref: project_members.project_id > projects.id [delete: cascade]
Ref: project_members.user_id > users.id
Ref: project_members.project_role_id > project_roles.id

// Invitations
Ref: project_invitations.project_id > projects.id [delete: cascade]
Ref: project_invitations.inviter_id > users.id
Ref: project_invitations.invitee_user_id > users.id
Ref: project_invitations.role_id > project_roles.id

// Workflow
Ref: workflow_steps.workflow_id > workflows.id
Ref: workflow_steps.status_id > workflow_statuses.id
Ref: status_transitions.workflow_id > workflows.id
Ref: status_transitions.from_status_id > workflow_statuses.id
Ref: status_transitions.to_status_id > workflow_statuses.id

// Sprints
Ref: sprints.project_id > projects.id

// Tasks
Ref: tasks.project_id > projects.id
Ref: tasks.issue_type_id > issue_types.id
Ref: tasks.status_id > workflow_statuses.id
Ref: tasks.sprint_id > sprints.id
Ref: tasks.parent_task_id > tasks.id [note: 'Cha-Con relationship']

// Task Details
Ref: task_assignees.task_id > tasks.id
Ref: task_assignees.user_id > users.id

Ref: task_labels.task_id > tasks.id
Ref: task_labels.label_id > labels.id

Ref: comments.task_id > tasks.id
Ref: comments.user_id > users.id

Ref: activity_logs.task_id > tasks.id
Ref: activity_logs.user_id > users.id

// Notifications
Ref: notifications.user_id > users.id
Ref: notifications.sender_id > users.id